--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-pdf": "^5.3.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
